--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -53,7 +53,7 @@
             <i class="icon ion-ios-arrow-right"></i>
           </ion-item>
           <ion-item class="text-left item item-icon-right bigTitle" ng-click="versionDetection()"  style="border-bottom: 0">
-            <img src="build/assets/img/setting/banben.png" class="iconImg"><span class='iconFont'>版本检测</span>
+            <img src="build/assets/img/setting/banben.png" class="iconImg"><span class='iconFont'>版本检测 V{{data.version}}</span>
           </ion-item>
         </ion-list>
         <div class="listStyle">
