--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -125,7 +125,9 @@
                 <span class="zhengxiao">整校数 <span class="numFontFamily">{{item.new_school}}</span></span>
               </div>
             </div>
-            <div class="auto-height"></div>
+            <div class="auto-height">
+              <img src="build/assets/img/indexPage/icon_spread.png" ng-if="false"/>
+            </div>
           </div>
           <a href="javascript:void(0)" class="view-all-btn"
              ng-show="newViewData.leading_ranking_company.leading_list.length>10"
@@ -171,7 +173,9 @@
                 <span class="zhengxiao">整校数 <span class="numFontFamily">{{item.new_school}}</span></span>
               </div>
             </div>
-            <div class="auto-height"></div>
+            <div class="auto-height">
+              <img src="build/assets/img/indexPage/icon_spread.png" ng-if="false"/>
+            </div>
           </div>
           <a href="javascript:void(0)" class="view-all-btn"
              ng-show="newViewData.user_ranking_company.user_list.length>10"
